# cuFalcon

./: README.md
cuFalcon_1024/: CMakeLists.txt  main.cu  run.sh
cuFalcon_1024/include/: api.cuh  common.cuh  const.cuh  expanded_key.cuh  ffSampling.cuh  fft.cuh  fpr.cuh  inner.cuh  rng.cuh  shake.cuh  sign.cuh  test_vector.cuh
cuFalcon_1024/src/: api.cu  common.cu  expanded_key.cu  ffSampling.cu  fft.cu  rng.cu  shake.cu  sign.cu
cuFalcon_512/: CMakeLists.txt  main.cu  run.sh
cuFalcon_512/include/: api.cuh  common.cuh  const.cuh  expanded_key.cuh  ffSampling.cuh  fft.cuh  fpr.cuh  rng.cuh  shake.cuh  sign.cuh  test_vector.cuh
cuFalcon_512/src/: api.cu  common.cu  expanded_key.cu  ffSampling.cu  fft.cu  rng.cu  shake.cu  sign.cu
